# gpu-collision-detection

./: .gitignore  CMakeLists.txt  README.md  build.Ps1  build.sh  config.json  main.py  requirements.txt  test.py
docs/: bibs.bib  hw.tex
docs/final/: hw.tex  input.tex  main.tex  preamble.tex  title.tex
docs/mid/: bibs.bib  hw.tex
headers/: camera.hpp  collidable.hpp  collision_detector.hpp  gpu_collision_detector.hpp  hittable.hpp  model.hpp  scene.hpp  shader.hpp  stopwatch.hpp  utils.hpp
kernels/: aabb.cl  construct.cl  defines.cl  matrices.cl  morton.cl  physics.cl  simple_add.cl  traverse.cl
libs/OpenCL-CLHPP/: .gitmodules  CMakeLists.txt  OpenCL-CLHPP.pc.in
libs/OpenCL-CLHPP/.github/workflows/: linux.yml  macos.yml  windows.yml
libs/OpenCL-CLHPP/tests/: CMakeLists.txt  cmock.yml  strip_defines.cmake  test_openclhpp.cpp
libs/OpenCL-Headers/: CMakeLists.txt  README.md
libs/OpenCL-Headers/CL/: cl_ext.h
libs/OpenCL-Headers/scripts/: .gitignore  README.md  cl_ext.h.mako  cl_function_types.h.mako  gen_headers.py  requirements.txt
libs/OpenCL-Headers/tests/: CMakeLists.txt
libs/glfw/debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
libs/opencl-icd-loader/: .gitignore  CMakeLists.txt  OpenCL.pc.in  README.md
libs/opencl-icd-loader/inc/: README.txt
libs/opencl-icd-loader/loader/: cllayerinfo.c  icd.c  icd.h  icd_dispatch.c  icd_dispatch.h  icd_dispatch_generated.c  icd_envvars.h  icd_platform.h  icd_version.h
libs/opencl-icd-loader/scripts/: .gitignore  README.md  gen_loader.py  gen_print_layer.py  icd_dispatch_generated.c.mako  icd_print_layer_generated.c.mako
libs/opencl-icd-loader/test/: CMakeLists.txt
resources/: collidables.txt
shaders/: model.fs  model.vs
sources/: camera.cpp  collidable.cpp  gpu_collision_detector.cpp  hittable.cpp  main.cpp  model.cpp  shader.cpp  utils.cpp
sources/gpu_collision_detector/: detect_collisions.cpp  gpu_collision_detector.cpp  test.cpp  update_physics.cpp
sources/scene/: config.cpp  events.cpp  gui.cpp  misc.cpp  render.cpp  scene.cpp
(+84 files in other folders)
